# RoamCalibGUI

./: CMakeLists.txt  README.md
src/: CalibrationController.cpp  CalibrationController.h  CaptureGallery.cpp  CaptureGallery.h  CornerSettingsWidget.cpp  CornerSettingsWidget.h  DeviceManager.cpp  DeviceManager.h  MainWindow.cpp  MainWindow.h  PatternSettingsWidget.cpp  PatternSettingsWidget.h  PreviewPane.cpp  PreviewPane.h  ResultsDialog.cpp  ResultsDialog.h  ResultsWindow.cpp  ResultsWindow.h  SettingsWindow.cpp  SettingsWindow.h  Utils.cpp  Utils.h  main.cpp
